Parent container had overflow hidden on, which was preventing my :before element from breaking out of its box. That is now fixed, adn the mobile version of the navbar functions as expected dynamically with WP friendly code.

--- a/devwp/sass/components/_header.scss
+++ b/devwp/sass/components/_header.scss
@@ -41,7 +41,6 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
   }
 
   li {
@@ -88,7 +87,7 @@
     display: block;
     width: 0;
     height: 0;
-    top: 14px;
+    top: 1px;
     left: 50%;
     transform: translateX(-50%);
     margin-top: -$arrow-size*2;
